objects/Cluster__c.object
<CustomObject>
    <fields>
        <fullName>APM_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APM 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APM_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APM 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APM_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APM 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenge_Action_Leader_Training_Date__c</fullName>
        <label>Challenge Action Leader Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Challenge_Action_Leader_Training_End__c</fullName>
        <label>Challenge Action Leader Training End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Action_Leader_Training_Time__c</fullName>
        <label>Challenge Action Leader Training Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Action_Leader_Training_Venue__c</fullName>
        <label>Challenge Action Leader Training Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Programme_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the cluster&apos;s PM</description>
        <inlineHelpText>Lookup to the cluster&apos;s PM</inlineHelpText>
        <label>Cluster Programme Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_code__c</fullName>
        <description>TCN&apos;s unique cluster code</description>
        <inlineHelpText>TCN&apos;s unique cluster code</inlineHelpText>
        <label>Cluster code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cluster_location_boroughs_areas__c</fullName>
        <description>Boroughs/areas covered by cluster</description>
        <inlineHelpText>The boroughs/areas covered by the cluster</inlineHelpText>
        <label>Cluster location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acocks Green</fullName>
                </value>
                <value>
                    <fullName>Aston</fullName>
                </value>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bartley Green</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Billesley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Blackburn with Darwen</fullName>
                </value>
                <value>
                    <fullName>Blackpool</fullName>
                </value>
                <value>
                    <fullName>Bordesley Green</fullName>
                </value>
                <value>
                    <fullName>Bournville</fullName>
                </value>
                <value>
                    <fullName>Bracknell Forest</fullName>
                </value>
                <value>
                    <fullName>Bradford</fullName>
                </value>
                <value>
                    <fullName>Brandwood</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Central Manchester</fullName>
                </value>
                <value>
                    <fullName>Chiltern</fullName>
                </value>
                <value>
                    <fullName>Chorley</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>CNE Birmingham</fullName>
                </value>
                <value>
                    <fullName>CNW Birmingham</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>CSE Birmingham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_name_long__c</fullName>
        <description>Full version of the cluster&apos;s name</description>
        <inlineHelpText>The full version of the cluster&apos;s name</inlineHelpText>
        <label>Cluster name long</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_salary_total__c</fullName>
        <label>Cluster salary total</label>
        <summarizedField>Wave__c.Wave_salary_total__c</summarizedField>
        <summaryForeignKey>Wave__c.Wave_Cluster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cluster_specific_RCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if there is cluster specific RCA copy</description>
        <inlineHelpText>Checkbox to indicate if there is cluster specific RCA copy</inlineHelpText>
        <label>Cluster specific RCA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster_specific_RCA_copy__c</fullName>
        <inlineHelpText>Enter RCA copy that is specific to the Cluster.  This will appear on the OBS.  Generally used for pilots</inlineHelpText>
        <label>Cluster specific RCA copy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Driving_and_parking_directions__c</fullName>
        <label>Driving and parking directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friday_Revue_Venue_Address__c</fullName>
        <label>Friday Revue Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Revue_Venue__c</fullName>
        <label>Friday Revue Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Start_Time__c</fullName>
        <label>Graduation Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_date__c</fullName>
        <label>Graduation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_venue__c</fullName>
        <label>Graduation venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_RCA_weekend_picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true the RCA weekend availability picklist is hidden on the OBS.</description>
        <inlineHelpText>Tick this to hide the RCA weekend availability picklist (for Summer) on the OBS.  Usually if the cluster is a pilot cluster</inlineHelpText>
        <label>Hide RCA weekend picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_standard_RCA_copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true, the standard RCA copy for OBS will not be shown</description>
        <inlineHelpText>Tick this if you want to hide the standard RCA copy for OBS (the RCA copy is in the AI content management system)</inlineHelpText>
        <label>Hide standard RCA copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_res_acc_in_Wave_1_different__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is res acc in Wave 1 different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JPs__c</fullName>
        <label>#JPs</label>
        <summarizedField>Wave__c.JPs__c</summarizedField>
        <summaryForeignKey>Wave__c.Wave_Cluster__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minibus_pick_up_from_RCA_venue__c</fullName>
        <description>Minibus pick up time from RCA venue</description>
        <label>Minibus pick up from RCA venue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minibus_pickup_from_Partner_Challenge__c</fullName>
        <description>Time minibus picks up Challengers at end of RCA Partner Challenge</description>
        <label>Minibus pickup from Partner Challenge</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_staff_target__c</fullName>
        <description>Monthly staffing target</description>
        <label>Monthly staff target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCS_Contract_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to NCS Contract Region. Currently used purely for NCS MI reporting purposes</inlineHelpText>
        <label>NCS Contract Region</label>
        <referenceTo>NCS_Contract_Region__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_public_transport__c</fullName>
        <label>Nearest public transport</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clusters3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_transport_limit_mins__c</fullName>
        <label>Public transport limit (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCA_Meeting_Pt_3_Sun_different_from_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCA Meeting Pt 3 Sun different from Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_Meeting_pt_1_Sun_different_from_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCA Meeting Pt 1 Sun different from Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_Meeting_pt_4_Sun_different_from_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only tick if RCA meeting point 4 Sunday is different from Saturday</description>
        <label>RCA Meeting pt 4 Sun different from Sat?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_end_time__c</fullName>
        <label>RCA end time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_end_time_staff__c</fullName>
        <label>RCA end time (staff)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_meeting_point_2_Sun_different__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only tick this if the RCA meeting point 2 Sun is different from Sat</description>
        <label>RCA Meeting Pt 2 Sun different from Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_start_time__c</fullName>
        <label>RCA start time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_start_time_staff__c</fullName>
        <label>RCA start time (staff)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClustersSPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_in_Metrics__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_target__c</fullName>
        <description>Number of staff members needed for the cluster</description>
        <label>Staff target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staffing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staffing Region</label>
        <referenceTo>Staffing_Region__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transport_Budget__c</fullName>
        <label>Transport Budget</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Walking_time_limit__c</fullName>
        <label>Walking time limit (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wave_Count__c</fullName>
        <inlineHelpText>Number of waves in this cluster</inlineHelpText>
        <label>Wave Count</label>
        <summaryFilterItems>
            <field>Wave__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Summer-long staff</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave__c.Wave_Cluster__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Waves_for_RCA_Meeting_point_3__c</fullName>
        <label>Waves for RCA Meeting point 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waves_for_RCA_meeting_point_1__c</fullName>
        <label>Waves for RCA meeting point 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waves_for_RCA_meeting_point_2__c</fullName>
        <label>Waves for RCA meeting point 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X16_seater_cost__c</fullName>
        <label>16 seater cost</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X48_seater__c</fullName>
        <label>48 seater cost</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X74__c</fullName>
        <label>74 seater cost</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X81_seater_cost__c</fullName>
        <label>81 seater cost</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zonal_GIS_VIS_lead_email__c</fullName>
        <formula>Zone__r.Zonal_GIS_VIS_lead_email__c</formula>
        <label>Zonal RAF lead email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zone the cluster is part of</description>
        <inlineHelpText>The zone this cluster is part of</inlineHelpText>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>Staffing_Region__r.Staff_Target_r__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cluster</label>
    <listViews>
        <fullName>All_2013_without_Autumn</fullName>
        <columns>NAME</columns>
        <columns>Staff_target__c</columns>
        <columns>Monthly_staff_target__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2013</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Autumn,1,2,Manchester,Surrey</value>
        </filters>
        <label>All 2013 without Autumn</label>
    </listViews>
    <listViews>
        <fullName>TMS_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Transport_Budget__c</columns>
        <columns>X16_seater_cost__c</columns>
        <columns>X48_seater__c</columns>
        <columns>X74__c</columns>
        <columns>X81_seater_cost__c</columns>
        <columns>Walking_time_limit__c</columns>
        <columns>Public_transport_limit_mins__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2015</value>
        </filters>
        <label>TMS Budgets</label>
    </listViews>
    <listViews>
        <fullName>X2012</fullName>
        <columns>NAME</columns>
        <columns>PM__c</columns>
        <columns>Cluster_Programme_Manager__c</columns>
        <columns>Zone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2012</value>
        </filters>
        <label>2012</label>
    </listViews>
    <listViews>
        <fullName>X2013</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster_name_long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2013</value>
        </filters>
        <label>2013</label>
    </listViews>
    <listViews>
        <fullName>X2014</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster_name_long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2014</value>
        </filters>
        <label>2014</label>
    </listViews>
    <listViews>
        <fullName>X2014_Dom</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Cluster_location_boroughs_areas__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2015</value>
        </filters>
        <filters>
            <field>Zone__c</field>
            <operation>contains</operation>
        </filters>
        <label>2014 Dom</label>
    </listViews>
    <listViews>
        <fullName>X2014_Peter</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Cluster_location_boroughs_areas__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2015</value>
        </filters>
        <filters>
            <field>Zone__c</field>
            <operation>contains</operation>
        </filters>
        <label>2015 Clusters Peter</label>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Cluster_location_boroughs_areas__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Walking_time_limit__c</columns>
        <columns>Public_transport_limit_mins__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2015</value>
        </filters>
        <label>2015</label>
    </listViews>
    <listViews>
        <fullName>X2015SummerPilot</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Cluster_location_boroughs_areas__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Hide_RCA_weekend_picklist__c</columns>
        <columns>Hide_standard_RCA_copy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2015</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Soco,Warks,Ebb,Web,WSurrey</value>
        </filters>
        <label>2015 Summer Pilot</label>
    </listViews>
    <listViews>
        <fullName>X2017</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Cluster_location_boroughs_areas__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.X2017</value>
        </filters>
        <label>2017</label>
    </listViews>
    <nameField>
        <label>Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <recordTypes>
        <fullName>X2011</fullName>
        <active>true</active>
        <description>2011 Clusters</description>
        <label>2011</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2012</fullName>
        <active>true</active>
        <description>2012 Clusters</description>
        <label>2012</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2012A</fullName>
        <active>true</active>
        <description>Autumn 2012 clusters</description>
        <label>2012A</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <description>Clusters for 2013 summer programme</description>
        <label>2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <label>2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2017</fullName>
        <active>true</active>
        <label>2017</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_name_changes_from_non_admins</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$User.ProfileId &lt;&gt; &quot;00e80000000th5B&quot;,
$User.ProfileId &lt;&gt; &quot;00eC0000001Sttg&quot;,
 ISCHANGED( Name )
)</errorConditionFormula>
        <errorMessage>Sorry - you cannot change the name of a cluster</errorMessage>
    </validationRules>
</CustomObject>